--- a/certificados.html
+++ b/certificados.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="UTF-8" />
@@ -18,9 +18,6 @@
 
 <body>
   <div class="wrapper">
-    <div class="preloader">
-      <div class="loading"><span></span><span></span><span></span><span></span></div>
-    </div><!-- /.preloader -->
 
     <!-- =========================
         Header
@@ -55,13 +52,20 @@
               <li class="nav__item">
                 <a href="quem-somos.html" class="nav__item-link">Quem Somos</a>
               </li><!-- /.nav-item -->
-
             </ul><!-- /.navbar-nav -->
             <button class="close-mobile-menu d-block d-lg-none"><i class="fas fa-times"></i></button>
+            <div class="col-xl-3 lista_contato">
+              <a href="tel:558436165000" class="contato_topo">
+                <i class="fa-solid fa-phone"></i><span>(84) 3616-5000</span>
+              </a>
+              <a href="https://wa.me/558436165001" target="_blank" class="contato_topo">
+                <i class="fa-brands fa-whatsapp"></i> <span>(84) 3616-5001</span>
+              </a>
+            </div>
           </div><!-- /.navbar-collapse -->
           <div class="separador" id="separador_resultado"></div>
-          <div class="d-xl-flex align-items-center position-relative ml-0 mr-1">
-            <a href="https://www.pulsesaude.com.br/" class="btn btn__primary btn__rounded ml-30">
+          <div class="botao-resultados d-xl-flex align-items-center position-relative">
+            <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-20">
               <span>Resultados</span>
             </a>
           </div>
@@ -163,47 +167,50 @@
               </div><!-- /.footer-widget__content -->
             </div>
           </div><!-- /.row -->
-          <div class="row ml-0 col-8">
+          <div class="row ml-0 col-lg-8 col-sm-12">
             <div class="descricao-footer">
-              <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular,
-                citogenética,
+              <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
                 teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
             </div>
           </div>
           <div class="row mt-40 ml-0">
-            <div class="d-flex align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 offset-lg-4">
               <ul class="social-icons list-unstyled">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
               </ul><!-- /.social-icons -->
-            </div><!-- /.row -->
-          </div><!-- /.footer-widget__content -->
-        </div><!-- /.container -->
-      </div><!-- /.footer-primary -->
-      <div class="footer-secondary">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-sm-12 col-md-6 col-lg-6">
-              <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
-              <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
-            </div><!-- /.col-lg-6 -->
-            <div class="col-sm-12 col-md-6 col-lg-6">
-              <nav class="cookies-privacidade">
-                <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
-                  <li class="mr-50"><a href="#">Cookies</a></li>
-                  <li><a href="#">Políticas de Privacidade</a></li>
-                </ul>
-              </nav>
-            </div><!-- /.col-lg-6 -->
+            </div>
           </div><!-- /.row -->
-        </div><!-- /.container -->
-      </div><!-- /.footer-secondary -->
-    </footer><!-- /.Footer -->
+        </div><!-- /.footer-widget__content -->
+      </div><!-- /.container -->
+  </div><!-- /.footer-primary -->
+  <div class="footer-secondary mt-20">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
+          <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
+        </div><!-- /.col-lg-6 -->
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <nav class="cookies-privacidade">
+            <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
+              <li class="mr-50"><a href="#">Cookies</a></li>
+              <li><a href="#">Políticas de Privacidade</a></li>
+            </ul>
+          </nav>
+        </div><!-- /.col-lg-6 -->
+      </div><!-- /.row -->
+    </div><!-- /.container -->
+  </div><!-- /.footer-secondary -->
+  </footer><!-- /.Footer -->
+  <div class="whats">
+    <a class="link-whats" href="https://wa.me/558436165001" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+  </div>
 
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/plugins.js"></script>
-    <script src="assets/js/main.js"></script>
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/plugins.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
