--- a/exames.html
+++ b/exames.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,8 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Hemolab - Laboratório de Hematologia e Análises Clínicas">
   <link href="assets/images/favicon/hemolab-icone.ico" rel="icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <title>Hemolab - Laboratório de análises clínicas</title>
 
   <link rel="stylesheet"
@@ -20,9 +18,6 @@
 
 <body>
   <div class="wrapper">
-    <div class="preloader">
-      <div class="loading"><span></span><span></span><span></span><span></span></div>
-    </div><!-- /.preloader -->
 
     <!-- =========================
         Header
@@ -57,13 +52,20 @@
               <li class="nav__item">
                 <a href="quem-somos.html" class="nav__item-link">Quem Somos</a>
               </li><!-- /.nav-item -->
-
             </ul><!-- /.navbar-nav -->
             <button class="close-mobile-menu d-block d-lg-none"><i class="fas fa-times"></i></button>
+            <div class="col-xl-3 lista_contato">
+              <a href="tel:558436165000" class="contato_topo">
+                <i class="fa-solid fa-phone"></i><span>(84) 3616-5000</span>
+              </a>
+              <a href="https://wa.me/558436165001" target="_blank" class="contato_topo">
+                <i class="fa-brands fa-whatsapp"></i> <span>(84) 3616-5001</span>
+              </a>
+            </div>
           </div><!-- /.navbar-collapse -->
           <div class="separador" id="separador_resultado"></div>
-          <div class="d-xl-flex align-items-center position-relative ml-0 mr-1">
-            <a href="https://www.pulsesaude.com.br/" class="btn btn__primary btn__rounded ml-30">
+          <div class="botao-resultados d-xl-flex align-items-center position-relative">
+            <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-20">
               <span>Resultados</span>
             </a>
           </div>
@@ -98,18 +100,14 @@
       <div class="container">
         <div class="card-exames row">
           <div class="col-sm-12 col-md-12 col-lg-12" id="accordion">
-            <div>
+            <div class="mb-50">
               <h5>Listagem de exames</h5>
             </div>
-            <div class="input-group rounded mb-80">
-              <input type="search" class="form-control rounded" placeholder="Pesquisar exame" aria-label="Search"
-                aria-describedby="search-addon" style="height: 46px;">
-            </div>
-            <div class="accordion-item opened">
+            <div class="accordion-item">
               <div class="accordion__header" data-toggle="collapse" data-target="#collapse1" aria-expanded="false">
-                <a class="accordion__title" href="#">PCR PARA VÍRUS MAYARO</a>
+                <a class="accordion__title" href="#">PCR para vírus Mayaro</a>
               </div><!-- /.accordion-item-header -->
-              <div id="collapse1" class="collapse show" data-parent="#accordion">
+              <div id="collapse1" class="collapse" data-parent="#accordion">
                 <div class="accordion__body">
                   <p>With any financial product that you buy, it is important that you know you are getting the best
                     advice from a reputable company as often</p>
@@ -179,49 +177,52 @@
               </div><!-- /.footer-widget__content -->
             </div>
           </div><!-- /.row -->
-          <div class="row ml-0 col-8">
+          <div class="row ml-0 col-lg-8 col-sm-12">
             <div class="descricao-footer">
               <p>O Hemolab dispõe de serviços de diagnose nas mais diversas áreas como biologia molecular, citogenética,
                 teste de paternidade, exames de DNA, sexagem fetal, morfologia de medula óssea, painéis exemplo.</p>
             </div>
           </div>
           <div class="row mt-40 ml-0">
-            <div class="d-flex align-items-center">
+            <div class="col-sm-12 col-md-12 col-lg-12 offset-lg-4">
               <ul class="social-icons list-unstyled">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
               </ul><!-- /.social-icons -->
-            </div><!-- /.row -->
-          </div><!-- /.footer-widget__content -->
-        </div><!-- /.container -->
-      </div><!-- /.footer-primary -->
-      <div class="footer-secondary">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-sm-12 col-md-6 col-lg-6">
-              <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
-              <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
-            </div><!-- /.col-lg-6 -->
-            <div class="col-sm-12 col-md-6 col-lg-6">
-              <nav class="cookies-privacidade">
-                <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
-                  <li class="mr-50"><a href="#">Cookies</a></li>
-                  <li><a href="#">Políticas de Privacidade</a></li>
-                </ul>
-              </nav>
-            </div><!-- /.col-lg-6 -->
+            </div>
           </div><!-- /.row -->
-        </div><!-- /.container -->
-      </div><!-- /.footer-secondary -->
-    </footer><!-- /.Footer -->
-
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/plugins.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
+        </div><!-- /.footer-widget__content -->
+      </div><!-- /.container -->
+  </div><!-- /.footer-primary -->
+  <div class="footer-secondary mt-20">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <span class="fz-14">&copy; 2023 Hemolab, Todos os direitos reservados. Desevolvido por</span>
+          <a class="fz-14 color-primary" href="https://www.lartsdesign.com.br">lartsdesign.com.br</a>
+        </div><!-- /.col-lg-6 -->
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <nav class="cookies-privacidade">
+            <ul class="list-unstyled footer__copyright-links d-flex flex-wrap justify-content-end mb-0">
+              <li class="mr-50"><a href="#">Cookies</a></li>
+              <li><a href="#">Políticas de Privacidade</a></li>
+            </ul>
+          </nav>
+        </div><!-- /.col-lg-6 -->
+      </div><!-- /.row -->
+    </div><!-- /.container -->
+  </div><!-- /.footer-secondary -->
+  </footer><!-- /.Footer -->
+  <div class="whats">
+    <a class="link-whats" href="https://wa.me/558436165001" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+  </div>
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/plugins.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 
 
 </body>
