--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="UTF-8" />
@@ -18,9 +18,6 @@
 
 <body>
   <div class="wrapper">
-    <div class="preloader">
-      <div class="loading"><span></span><span></span><span></span><span></span></div>
-    </div><!-- /.preloader -->
 
     <!-- =========================
         Header
@@ -68,7 +65,7 @@
           </div><!-- /.navbar-collapse -->
           <div class="separador" id="separador_resultado"></div>
           <div class="botao-resultados d-xl-flex align-items-center position-relative">
-            <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-30">
+            <a href="https://www.pulsesaude.com.br/" target="_blank" class="btn btn__primary btn__rounded ml-20">
               <span>Resultados</span>
             </a>
           </div>
@@ -81,7 +78,7 @@
     ============================== -->
     <section class="slider">
       <div class="slick-carousel m-slides-0"
-        data-slick='{"slidesToShow": 1, "autoplay": true, "autoplaySpeed": 2000, "arrows": true,"dots": false, "speed": 700,"fade": true,"cssEase": "linear"}'>
+        data-slick='{"slidesToShow": 1, "autoplay": true, "autoplaySpeed": 2000, "arrows": true,"dots": false, "speed": 700,"fade": true,"cssEase": "linear", "responsive": [ {"breakpoint": 1300, "settings": {"arrows": true}}]}'>
         <div class="slide-item align-v-h">
           <div class="bg-img"><img src="assets/images/sliders/2.jpg" alt="slide img"></div>
           <div class="container">
@@ -304,29 +301,125 @@
           <div class="col-12">
             <div class="carousel-container">
               <div class="slick-carousel carousel-arrows-light carousel-dots-light"
-                data-slick='{"slidesToShow": 4, "slidesToScroll": 2, "autoplay": true, "arrows": true, "dots": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 1}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
+                data-slick='{"slidesToShow": 3, "slidesToScroll": 2, "autoplay": true, "arrows": true, "dots": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 1}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
                 <!-- unidade-item #1 -->
                 <div class="service-item">
                   <div class="service__img">
-                    <img src="assets/images/services/1.jpg" alt="img" loading="lazy">
+                    <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
                   </div><!-- /.service__img -->
                   <div class="service__content">
-                    <h4 class="service__title">Itapetinga</h4>
-                    <div class="ml-0">
-                      <i class="fa-solid fa-location-dot fa-xl"></i>
-                      <span>Avenida Itapetinga, 920 - Potengi</span>
-                    </div>
-                    <div class="ml-0">
-                      <i class="fa-solid fa-phone fa-xl"></i>
-                      <span class="">(84) 3616-5000</span>
-                    </div>
-                    <div class="info-unidade ml-0">
-                      <i class="fa-regular fa-clock fa-xl"></i>
-                      <span>Segunda à Sexta das 6:00h às 12:00h</span>
-                      <span>Sábado
-                        das 6:30h
-                        as 10:30h</span>
-                    </div>
+                    <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
+                        Itapetinga,
+                        920 -
+                        Potengi</li>
+                      <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
+                      <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
+                        6:00h
+                        as
+                        12:00h Sábado das 6:30h as 10:30h</li>
+                    </ul>
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #1 -->
+                <div class="service-item">
+                  <div class="service__img">
+                    <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  </div><!-- /.service__img -->
+                  <div class="service__content">
+                    <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
+                        Itapetinga,
+                        920 -
+                        Potengi</li>
+                      <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
+                      <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
+                        6:00h
+                        as
+                        12:00h Sábado das 6:30h as 10:30h</li>
+                    </ul>
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #1 -->
+                <div class="service-item">
+                  <div class="service__img">
+                    <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  </div><!-- /.service__img -->
+                  <div class="service__content">
+                    <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
+                        Itapetinga,
+                        920 -
+                        Potengi</li>
+                      <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
+                      <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
+                        6:00h
+                        as
+                        12:00h Sábado das 6:30h as 10:30h</li>
+                    </ul>
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #1 -->
+                <div class="service-item">
+                  <div class="service__img">
+                    <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  </div><!-- /.service__img -->
+                  <div class="service__content">
+                    <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
+                        Itapetinga,
+                        920 -
+                        Potengi</li>
+                      <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
+                      <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
+                        6:00h
+                        as
+                        12:00h Sábado das 6:30h as 10:30h</li>
+                    </ul>
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #1 -->
+                <div class="service-item">
+                  <div class="service__img">
+                    <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  </div><!-- /.service__img -->
+                  <div class="service__content">
+                    <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
+                        Itapetinga,
+                        920 -
+                        Potengi</li>
+                      <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
+                      <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
+                        6:00h
+                        as
+                        12:00h Sábado das 6:30h as 10:30h</li>
+                    </ul>
+                  </div><!-- /.unidade__content -->
+                </div><!-- /.unidade-item -->
+                <!-- unidade-item #1 -->
+                <div class="service-item">
+                  <div class="service__img">
+                    <img src="assets/images/unidades/unidade1.png" alt="img" loading="lazy">
+                  </div><!-- /.service__img -->
+                  <div class="service__content">
+                    <h4 class="service__title mb-30">Hemolab - Itapetinga</h4>
+                    <ul class="fa-ul">
+                      <li><span class="fa-li"><i class="fa-solid fa-location-dot fa-xl"></i></span>Avenida
+                        Itapetinga,
+                        920 -
+                        Potengi</li>
+                      <li><span class="fa-li"><i class="fa-solid fa-phone fa-xl"></i></span>(84) 3616-5000</li>
+                      <li><span class="fa-li"><i class="fa-regular fa-clock fa-xl"></i></span>Segunda à Sexta das
+                        6:00h
+                        as
+                        12:00h Sábado das 6:30h as 10:30h</li>
+                    </ul>
                   </div><!-- /.unidade__content -->
                 </div><!-- /.unidade-item -->
               </div><!-- /.carousel -->
@@ -335,8 +428,8 @@
         </div><!-- /.row -->
         <div class="row">
           <div class="col-12 d-flex justify-content-end mt--20">
-            <a href="departments.html" class="btn btn__white btn__link">
-              <span>Saiba mais</span>
+            <a href="unidades.html" class="btn btn__white btn__link" id="btn-unidades">
+              <span>Todas as unidades</span>
               <i class="icon-arrow-right"></i>
             </a>
           </div><!-- /.col-12 -->
@@ -374,12 +467,6 @@
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.
                   </p>
-                  <div class="mt-20 d-flex flex-wrap justify-content-between align-items-center">
-                    <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded">
-                      <span>Saiba mais</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 1 -->
               <!-- Certificado 2 -->
@@ -392,12 +479,6 @@
                   <p class="member__job">Categoria Diamante</p>
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.</p>
-                  <div class="mt-20 d-flex flex-wrap justify-content-between align-items-center">
-                    <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded">
-                      <span>Saiba mais</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 2 -->
               <!-- Certificado 3 -->
@@ -410,16 +491,15 @@
                   <p class="member__job">Categoria Diamante</p>
                   <p class="member__desc">Certificado concedido pelo Programa Nacional de Controle de Qualidade (PNCQ)
                     aos laboratórios que tiveram 20 anos de excelente desempenho.</p>
-                  <div class="mt-20 d-flex flex-wrap justify-content-between align-items-center">
-                    <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded">
-                      <span>Saiba mais</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div>
                 </div><!-- /.cert-info -->
               </div><!-- /.Certificado 3 -->
             </div><!-- /.carousel -->
           </div><!-- /.col-12 -->
+          <div class="btn btn__primary btn__rounded mt-50 mr-auto ml-auto">
+            <a href="certificados.html" class="btn btn__secondary btn__link btn__rounded color-white">
+              <span>Saiba mais</span>
+            </a>
+          </div>
         </div><!-- /.row -->
       </div><!-- /.container -->
     </section><!-- /.certificados -->
@@ -572,7 +652,7 @@
         </div><!-- /.footer-widget__content -->
       </div><!-- /.container -->
   </div><!-- /.footer-primary -->
-  <div class="footer-secondary">
+  <div class="footer-secondary mt-20">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6 col-lg-6">
